[tool.poetry]
name = "nanogenmo-2022"
version = "0.1.0"
description = ""
authors = ["Will Fitzgerald <willf@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
openai = "^0.24.0"
bs4 = "^0.0.1"
nltk = "^3.7"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
flake8 = "^5.0.4"
pytest = "^7.2.0"
isort = "^5.10.1"
coverage = "^6.5.0"
ipython = "^8.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
